[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/npc/npc ProfesorLow.png" type="Texture" id=1]
[ext_resource path="res://src/Npc/Professor.gd" type="Script" id=2]
[ext_resource path="res://assets/object/Asset 3.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.1601, 192.662 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 82.1833, 76 )

[node name="Professor" type="Area2D"]
position = Vector2( 0, -77 )
script = ExtResource( 2 )

[node name="NPC" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="NPC"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/StaticBody2D"]
modulate = Color( 0.113725, 0.0666667, 0.952941, 1 )
position = Vector2( 0, -114.682 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.02337 )
shape = SubResource( 2 )

[node name="TouchActionNPC" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( -40, -16.7511 )
normal = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Professor_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Professor_body_exited"]
[connection signal="pressed" from="TouchActionNPC" to="." method="_on_TouchActionNPC_pressed"]
